# P3_PPO_SAC

./: MUJOCO_LOG.TXT  README.md  main.py  pyproject.toml
Report/: main.tex  references.bib
configs/: hyperparameters.yml
runs/old_sac_hopper_pixel/: config.yml
runs/old_sac_hopper_pixel/eval/: best_reward.txt
runs/old_sac_hopper_pixel/tensorboard/: events.out.tfevents.1775643438.AA25LABIAP01.36133.0  events.out.tfevents.1775661624.AA25LABIAP01.182521.0  events.out.tfevents.1775719618.AA25LABIAP01.719882.0  events.out.tfevents.1775757899.AA25LABIAP01.1041762.0
runs/ppo_cartpole_pixel/: config.yml  training_log.csv
runs/ppo_hopper_pixel/: config.yml
runs/ppo_hopper_pixel/eval/: best_reward.txt
runs/ppo_walker2d_pixel/: config.yml
runs/sac_cartpole_pixel/: config.yml
runs/sac_cartpole_pixel/tensorboard/: events.out.tfevents.1775642574.AA25LABIAP01.28614.0
runs/sac_hopper_pixel/: config.yml
runs/sac_hopper_pixel/eval/: best_reward.txt
runs/sac_hopper_pixel/tensorboard/: events.out.tfevents.1775662866.AA25LABIAP01.194994.0  events.out.tfevents.1775931081.AA25LABIAP01.2432737.0
src/: config.py  networks.py  utils.py  wrappers.py
src/ppo/: train.py
src/sac/: train.py
